--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     </section>
     <section id="contact">
         <h2>Contact</h2>
-        <p>You can reach me at: <a href="mailto:ty@example.com">ty@example.com</a></p>
+        <p>You can reach me at: <a href="mailto:Ty.Laarman@yahoo.com">Ty.Laarman@yahoo.com</a></p>
     </section>
     <footer>
         <p>&copy; 2024 Ty Laarman</p>
